@@ -1,4 +1,4 @@
-package com.nlp4re.logic;
+package com.nlp4re.service.logic;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.is;
@@ -9,7 +9,6 @@ import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.ArgumentMatchers.anyMap;
 import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -19,22 +18,39 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.boot.test.context.SpringBootTest;
+
 import opennlp.tools.util.Span;
 
-import com.nlp4re.operations.PatternMatcher;
-import com.nlp4re.operations.SentenceAnalyzer;
+import com.nlp4re.domain.Anchor;
+import com.nlp4re.domain.Conditions;
+import com.nlp4re.domain.Modal;
+import com.nlp4re.service.operations.PatternMatcher;
+import com.nlp4re.service.operations.RegexesProvider;
+import com.nlp4re.service.operations.SentenceAnalyzer;
 
 /**
  * Test for {@link RequirementLogicImpl_Eng}
  */
+@ExtendWith(MockitoExtension.class)
+@SpringBootTest
 public class RequirementLogicImpl_EngTest {
+
+	@Mock
+	private SentenceAnalyzer mockSentenceAnalyzer;
+	@Mock
+	private PatternMatcher mockPatternMatcher;
+	@Mock
+	private RegexesProvider mockRegexesProvider;
 
 	@Test
 	public void test_getTokensFromSentence_NullPointerException() {
 		// given
-		SentenceAnalyzer sentenceAnalyzer = mock(SentenceAnalyzer.class);
-		PatternMatcher matcher = mock(PatternMatcher.class);
-		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(sentenceAnalyzer, matcher);
+		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
+				mockPatternMatcher, mockRegexesProvider);
 		// when + then
 		assertThrows(NullPointerException.class, () -> requirementLogic.getTokensFromSentence(null));
 	}
@@ -42,11 +58,12 @@ public class RequirementLogicImpl_EngTest {
 	@Test
 	public void test_getTokensFromSentence() {
 		// given
-		SentenceAnalyzer sentenceAnalyzer = mock(SentenceAnalyzer.class);
-		when(sentenceAnalyzer.getTokens(anyString())).thenReturn(new String[] { "return", "tokens" });
 
-		PatternMatcher matcher = mock(PatternMatcher.class);
-		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(sentenceAnalyzer, matcher);
+		when(mockSentenceAnalyzer.getTokens(anyString())).thenReturn(new String[] { "return", "tokens" });
+
+		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
+				mockPatternMatcher, mockRegexesProvider);
+
 		// when
 		String[] result = requirementLogic.getTokensFromSentence(anyString());
 		// then
@@ -58,21 +75,20 @@ public class RequirementLogicImpl_EngTest {
 	@Test
 	public void test_getTagsFromTokens_NullPointerException() {
 		// given
-		SentenceAnalyzer sentenceAnalyzer = mock(SentenceAnalyzer.class);
-		PatternMatcher matcher = mock(PatternMatcher.class);
-		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(sentenceAnalyzer, matcher);
+		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
+				mockPatternMatcher, mockRegexesProvider);
 		// when + then
 		assertThrows(NullPointerException.class, () -> requirementLogic.getTagsFromTokens(null));
 	}
 
 	@Test
 	public void test_getTagsFromTokens() {
-		// given
-		SentenceAnalyzer sentenceAnalyzer = mock(SentenceAnalyzer.class);
-		when(sentenceAnalyzer.getPOSTags(any(String[].class))).thenReturn(new String[] { "VP", "NNS" });
 
-		PatternMatcher matcher = mock(PatternMatcher.class);
-		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(sentenceAnalyzer, matcher);
+		// given
+		when(mockSentenceAnalyzer.getPOSTags(any(String[].class))).thenReturn(new String[] { "VP", "NNS" });
+
+		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
+				mockPatternMatcher, mockRegexesProvider);
 		// when
 		String[] result = requirementLogic.getTagsFromTokens(new String[] { "tokens" });
 		// then
@@ -84,9 +100,8 @@ public class RequirementLogicImpl_EngTest {
 	@Test
 	public void test_parseModalVp_NullPointerException() {
 		// given
-		SentenceAnalyzer sentenceAnalyzer = mock(SentenceAnalyzer.class);
-		PatternMatcher matcher = mock(PatternMatcher.class);
-		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(sentenceAnalyzer, matcher);
+		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
+				mockPatternMatcher, mockRegexesProvider);
 		// when + then
 		assertThrows(NullPointerException.class, () -> requirementLogic.parseModalVp(0, null));
 	}
@@ -94,9 +109,8 @@ public class RequirementLogicImpl_EngTest {
 	@Test
 	public void test_parseModalVp_returnFalse() {
 		// given
-		SentenceAnalyzer sentenceAnalyzer = mock(SentenceAnalyzer.class);
-		PatternMatcher matcher = mock(PatternMatcher.class);
-		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(sentenceAnalyzer, matcher);
+		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
+				mockPatternMatcher, mockRegexesProvider);
 		// when
 		boolean result = requirementLogic.parseModalVp(-1, Arrays.asList(new String[] { "return", "tokens" }));
 		// then
@@ -106,38 +120,36 @@ public class RequirementLogicImpl_EngTest {
 	@Test
 	public void test_parseModalVp_returnTrue() {
 		// given
-		SentenceAnalyzer sentenceAnalyzer = mock(SentenceAnalyzer.class);
-		PatternMatcher matcher = mock(PatternMatcher.class);
-		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(sentenceAnalyzer, matcher);
+		when(mockRegexesProvider.getModalRegexes()).thenReturn(List.of(new Modal("should", 1)));
+		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
+				mockPatternMatcher, mockRegexesProvider);
 		// when
 		boolean result = requirementLogic.parseModalVp(2, Arrays.asList(new String[] { "some", "tokens", "should" }));
 		// then
 		assertThat(result, is(true));
 	}
 
-	 @Test
-	 public void test_parseSystemname_NullPointerException() {
-	 // given
-	 SentenceAnalyzer sentenceAnalyzer = mock(SentenceAnalyzer.class);
-	 PatternMatcher matcher = mock(PatternMatcher.class);
-	 RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(sentenceAnalyzer, matcher);
-	 // when + then
-	 assertThrows(NullPointerException.class, () -> requirementLogic.parseSystemName(null, 1, 1));
-	 }
+	@Test
+	public void test_parseSystemname_NullPointerException() {
+		// given
+		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
+				mockPatternMatcher, mockRegexesProvider);
+		// when + then
+		assertThrows(NullPointerException.class, () -> requirementLogic.parseSystemName(null, 1, 1));
+	}
 
 	@Test
 	public void test_parseSystemname_returnTrue() {
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
 		when(mockSentenceAnalyzer.getSystemName(anyList(), anyInt(), anyInt()))
 				.thenReturn(Arrays.asList(new String[] { "the", "system", "name" }));
 		when(mockSentenceAnalyzer.getPOSTags(any(String[].class))).thenReturn(new String[] { "DT", "NP", "NP" });
 
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
 		Span mockSpan = new Span(0, 0, "the");
 		when(mockPatternMatcher.matches(anyMap(), anyString())).thenReturn(new Span[] { mockSpan });
+
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 		// when
 		boolean result = requirementLogic.parseSystemName(Arrays.asList(new String[] { "haha", "system", "should" }), 0,
 				0);
@@ -150,14 +162,13 @@ public class RequirementLogicImpl_EngTest {
 	@Test
 	public void test_parseSystemname_noPattern() {
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
 		when(mockSentenceAnalyzer.getSystemName(anyList(), anyInt(), anyInt()))
 				.thenReturn(Arrays.asList(new String[] { "the", "system", "name" }));
 
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
 		when(mockPatternMatcher.matches(anyMap(), anyString())).thenReturn(null);
+
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 		// when
 		boolean result = requirementLogic.parseSystemName(Arrays.asList(new String[] { "haha", "system", "should" }), 0,
 				0);
@@ -171,12 +182,11 @@ public class RequirementLogicImpl_EngTest {
 	@Test
 	public void test_parseSystemname_noSystemname() {
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
 		// return no system name
 		when(mockSentenceAnalyzer.getSystemName(anyList(), anyInt(), anyInt())).thenReturn(null);
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
+
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 		// when
 		boolean result = requirementLogic.parseSystemName(Arrays.asList(new String[] { "haha", "system", "should" }), 0,
 				0);
@@ -189,16 +199,15 @@ public class RequirementLogicImpl_EngTest {
 	@Test
 	public void test_parseSystemname_VerbAfterSystemname() {
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
 		when(mockSentenceAnalyzer.getSystemName(anyList(), anyInt(), anyInt()))
 				.thenReturn(Arrays.asList(new String[] { "all", "systems", "of", "the", "something", "have" }));
 		when(mockSentenceAnalyzer.getPOSTags(any(String[].class))).thenReturn(new String[] { "DT", "NP", "NP", "VB" });
 
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
-		Span mockSpan = new Span(0, 0, "all_some");
+		Span mockSpan = new Span(0, 0, "all");
 		when(mockPatternMatcher.matches(anyMap(), anyString())).thenReturn(new Span[] { mockSpan });
+
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 		// when
 		boolean result = requirementLogic.parseSystemName(Arrays.asList(new String[] { "haha", "system", "should" }), 0,
 				0);
@@ -211,16 +220,15 @@ public class RequirementLogicImpl_EngTest {
 	@Test
 	public void test_parseSystemname_NoVerbAfterSystemname() {
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
 		when(mockSentenceAnalyzer.getSystemName(anyList(), anyInt(), anyInt()))
 				.thenReturn(Arrays.asList(new String[] { "all", "systems", "of", "the", "something", "have" }));
 		when(mockSentenceAnalyzer.getPOSTags(any(String[].class))).thenReturn(new String[] { "DT", "NP", "NP", "MD" });
 
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
-		Span mockSpan = new Span(0, 0, "all_some");
+		Span mockSpan = new Span(0, 0, "all");
 		when(mockPatternMatcher.matches(anyMap(), anyString())).thenReturn(new Span[] { mockSpan });
+
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 		// when
 		boolean result = requirementLogic.parseSystemName(Arrays.asList(new String[] { "haha", "system", "should" }), 0,
 				0);
@@ -233,15 +241,14 @@ public class RequirementLogicImpl_EngTest {
 	@Test
 	public void test_parseSystemname_ThoseType_returnTrue() {
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
 		when(mockSentenceAnalyzer.getSystemName(anyList(), anyInt(), anyInt()))
 				.thenReturn(Arrays.asList(new String[] { "all", "systems", "of", "the", "something", "have" }));
 
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
 		Span mockSpan = new Span(0, 0, "those");
 		when(mockPatternMatcher.matches(anyMap(), anyString())).thenReturn(new Span[] { mockSpan });
+
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 		// when
 		boolean result = requirementLogic.parseSystemName(Arrays.asList(new String[] { "haha", "system", "should" }), 0,
 				0);
@@ -254,9 +261,8 @@ public class RequirementLogicImpl_EngTest {
 	@Test
 	public void test_parseCondition_NullPointerException() {
 		// given
-		SentenceAnalyzer sentenceAnalyzer = mock(SentenceAnalyzer.class);
-		PatternMatcher matcher = mock(PatternMatcher.class);
-		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(sentenceAnalyzer, matcher);
+		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
+				mockPatternMatcher, mockRegexesProvider);
 		// when + then
 		assertThrows(NullPointerException.class, () -> requirementLogic.parseCondition(null, 0, 0));
 
@@ -265,12 +271,10 @@ public class RequirementLogicImpl_EngTest {
 	@Test
 	public void test_parseCondition_returnTrue_no_condition() {
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
 		when(mockSentenceAnalyzer.getConditions(anyList(), anyInt(), anyInt())).thenReturn(null);
 
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 		// when
 		boolean result = requirementLogic.parseCondition(Arrays.asList(new String[] { "haha", "system", "should" }), 0,
 				0);
@@ -278,20 +282,19 @@ public class RequirementLogicImpl_EngTest {
 		assertThat(result, is(true));
 		verify(mockSentenceAnalyzer, times(1)).getConditions(anyList(), anyInt(), anyInt());
 		verify(mockPatternMatcher, times(0)).matches(anyMap(), anyString());
+		verify(mockRegexesProvider, times(0)).getConditionsRegexes();
 	}
 
 	@Test
 	public void test_parseCondition_noPattern() {
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
 		when(mockSentenceAnalyzer.getConditions(anyList(), anyInt(), anyInt()))
 				.thenReturn(Arrays.asList(new String[] { "the", "system", "name" }));
 
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
 		when(mockPatternMatcher.matches(anyMap(), anyString())).thenReturn(null);
 
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 		// when
 		boolean result = requirementLogic.parseCondition(Arrays.asList(new String[] { "haha", "system", "then" }), 0,
 				0);
@@ -299,21 +302,23 @@ public class RequirementLogicImpl_EngTest {
 		assertThat(result, is(false));
 		verify(mockSentenceAnalyzer, times(1)).getConditions(anyList(), anyInt(), anyInt());
 		verify(mockPatternMatcher, times(1)).matches(anyMap(), anyString());
+		verify(mockRegexesProvider, times(1)).getConditionsRegexes();
 	}
 
 	@Test
 	public void test_parseCondition_returnTrue_If_Then() {
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
 		when(mockSentenceAnalyzer.getConditions(anyList(), anyInt(), anyInt()))
 				.thenReturn(Arrays.asList(new String[] { "if", ",", "then" }));
 
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
 		Span mockSpan = new Span(0, 0, "if");
 		when(mockPatternMatcher.matches(anyMap(), anyString())).thenReturn(new Span[] { mockSpan });
 
+		when(mockRegexesProvider.getConditionsRegexes())
+				.thenReturn(List.of(new Conditions("if", "^if [\\w\\s], then", 1)));
+
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 		// when
 		boolean result = requirementLogic.parseCondition(Arrays.asList(new String[] { "haha", "system", "then" }), 1,
 				0);
@@ -321,21 +326,20 @@ public class RequirementLogicImpl_EngTest {
 		assertThat(result, is(true));
 		verify(mockSentenceAnalyzer, times(1)).getConditions(anyList(), anyInt(), anyInt());
 		verify(mockPatternMatcher, times(1)).matches(anyMap(), anyString());
+		verify(mockRegexesProvider, times(1)).getConditionsRegexes();
 	}
 
 	@Test
 	public void test_parseCondition_returnFalse_If_Then() {
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
 		when(mockSentenceAnalyzer.getConditions(anyList(), anyInt(), anyInt()))
 				.thenReturn(Arrays.asList(new String[] { "if", ",", "ahhaha" }));
 
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
 		Span mockSpan = new Span(0, 0, "if");
 		when(mockPatternMatcher.matches(anyMap(), anyString())).thenReturn(new Span[] { mockSpan });
 
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 		// when
 		boolean result = requirementLogic.parseCondition(Arrays.asList(new String[] { "haha", "system", "hahaha" }), 1,
 				0);
@@ -343,19 +347,20 @@ public class RequirementLogicImpl_EngTest {
 		assertThat(result, is(false));
 		verify(mockSentenceAnalyzer, times(1)).getConditions(anyList(), anyInt(), anyInt());
 		verify(mockPatternMatcher, times(1)).matches(anyMap(), anyString());
+		verify(mockRegexesProvider, times(1)).getConditionsRegexes();
 	}
 
 	@Test
 	public void test_parseCondition_otherConditionTypes() {
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
 		when(mockSentenceAnalyzer.getConditions(anyList(), anyInt(), anyInt()))
 				.thenReturn(Arrays.asList(new String[] { "while", "system", "haha" }));
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
+
 		Span mockSpan = new Span(0, 0, "while_during");
 		when(mockPatternMatcher.matches(anyMap(), anyString())).thenReturn(new Span[] { mockSpan });
+
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 		// when
 		boolean result = requirementLogic.parseCondition(Arrays.asList(new String[] { "haha", "system", "should" }), 0,
 				0);
@@ -363,26 +368,23 @@ public class RequirementLogicImpl_EngTest {
 		assertThat(result, is(true));
 		verify(mockSentenceAnalyzer, times(1)).getConditions(anyList(), anyInt(), anyInt());
 		verify(mockPatternMatcher, times(1)).matches(anyMap(), anyString());
+		verify(mockRegexesProvider, times(1)).getConditionsRegexes();
 	}
 
-	 @Test
-	 public void test_parseAnchor_NullPointerException() {
-	 // given
-	 SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
-	 PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
-	 RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-	 mockPatternMatcher);
-	 // when + then
-	 assertThrows(NullPointerException.class, () -> requirementLogic.parseAnchor(null, null, 1, 1));
-	 }
+	@Test
+	public void test_parseAnchor_NullPointerException() {
+		// given
+		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
+				mockPatternMatcher, mockRegexesProvider);
+		// when + then
+		assertThrows(NullPointerException.class, () -> requirementLogic.parseAnchor(null, null, 1, 1));
+	}
 
 	@Test
 	public void test_parseAnchor_ProvideType_ReturnFalse() {
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 
 		when(mockSentenceAnalyzer.getAnchorStartIndex(anyList(), anyInt(), anyInt())).thenReturn(1);
 		Span mockSpan = new Span(0, 0, "provide");
@@ -404,16 +406,14 @@ public class RequirementLogicImpl_EngTest {
 	@Test
 	public void test_parseAnchor_ProvideType_ReturnFalse_noVerbAfterAbilityTo() {
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 
 		when(mockSentenceAnalyzer.getAnchorStartIndex(anyList(), anyInt(), anyInt())).thenReturn(1);
 		Span mockSpan = new Span(0, 0, "provide");
 		when(mockPatternMatcher.matches(anyMap(), anyString())).thenReturn(new Span[] { mockSpan });
 		when(mockSentenceAnalyzer.getChunks(any(String[].class), any(String[].class)))
-				.thenReturn(Arrays.asList(new String[] { "MD", "VB" }));
+				.thenReturn(Arrays.asList(new String[] { "MD", "NP" }));
 		// when
 		boolean result = requirementLogic.parseAnchor(
 				Arrays.asList(
@@ -430,10 +430,8 @@ public class RequirementLogicImpl_EngTest {
 	@Test
 	public void test_parseAnchor_ProvideType_returnTrue() {
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 
 		when(mockSentenceAnalyzer.getAnchorStartIndex(anyList(), anyInt(), anyInt())).thenReturn(0);
 		Span mockSpan = new Span(0, 0, "provide");
@@ -455,16 +453,13 @@ public class RequirementLogicImpl_EngTest {
 
 	@Test
 	public void test_parseAnchor_BeAbleTo_ReturnFalse() {
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
+
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 
 		when(mockSentenceAnalyzer.getAnchorStartIndex(anyList(), anyInt(), anyInt())).thenReturn(0);
 		Span mockSpan = new Span(0, 0, "be_able_to");
 		when(mockPatternMatcher.matches(anyMap(), anyString())).thenReturn(new Span[] { mockSpan });
-		when(mockSentenceAnalyzer.getChunks(any(String[].class), any(String[].class)))
-				.thenReturn(Arrays.asList(new String[] { "MD", "VB" }));
 		// when
 		boolean result = requirementLogic.parseAnchor(
 				Arrays.asList(
@@ -479,16 +474,13 @@ public class RequirementLogicImpl_EngTest {
 
 	@Test
 	public void test_parseAnchor_BeAbleTo_ReturnTrue() {
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
+
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 
 		when(mockSentenceAnalyzer.getAnchorStartIndex(anyList(), anyInt(), anyInt())).thenReturn(0);
 		Span mockSpan = new Span(0, 0, "be_able_to");
 		when(mockPatternMatcher.matches(anyMap(), anyString())).thenReturn(new Span[] { mockSpan });
-		when(mockSentenceAnalyzer.getChunks(any(String[].class), any(String[].class)))
-				.thenReturn(Arrays.asList(new String[] { "MD", "VB" }));
 		// when
 		boolean result = requirementLogic.parseAnchor(
 				Arrays.asList(
@@ -504,18 +496,16 @@ public class RequirementLogicImpl_EngTest {
 
 	@Test
 	public void test_parseAnchor_ReturnFalse() {
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
+
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 
 		when(mockSentenceAnalyzer.getAnchorStartIndex(anyList(), anyInt(), anyInt())).thenReturn(0);
 		Span mockSpan = new Span(0, 0, "provide");
 		Span mockSpan1 = new Span(0, 0, "be_able_to");
 
 		when(mockPatternMatcher.matches(anyMap(), anyString())).thenReturn(new Span[] { mockSpan, mockSpan1 });
-		when(mockSentenceAnalyzer.getChunks(any(String[].class), any(String[].class)))
-				.thenReturn(Arrays.asList(new String[] { "MD", "VB" }));
+		when(mockRegexesProvider.getAnchorRegexes()).thenReturn(List.of(new Anchor("the", "the .", 1)));
 		// when
 		boolean result = requirementLogic.parseAnchor(
 				Arrays.asList(
@@ -530,10 +520,9 @@ public class RequirementLogicImpl_EngTest {
 
 	@Test
 	public void test_parseAnchor_NoPattern_ReturnTrue() {
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
+
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 
 		when(mockSentenceAnalyzer.getAnchorStartIndex(anyList(), anyInt(), anyInt())).thenReturn(0);
 		when(mockPatternMatcher.matches(anyMap(), anyString())).thenReturn(null);
@@ -550,24 +539,42 @@ public class RequirementLogicImpl_EngTest {
 		verify(mockSentenceAnalyzer, times(0)).getChunks(any(String[].class), any(String[].class));
 	}
 
-	 @Test
-	 public void test_parseObject_NullPointerException() {
-	
-	 // given
-	 SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
-	 PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
-	 RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-	 mockPatternMatcher);
-	 // when + then
-	 assertThrows(NullPointerException.class, () -> requirementLogic.parseObject(null, null, 1));
-	 }
+	@Test
+	public void test_parseAnchor_NoPattern_PassivForm_ReturnTrue() {
+
+		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
+				mockPatternMatcher, mockRegexesProvider);
+
+		when(mockSentenceAnalyzer.getAnchorStartIndex(anyList(), anyInt(), anyInt())).thenReturn(0);
+		when(mockPatternMatcher.matches(anyMap(), anyString())).thenReturn(null);
+		// when
+		boolean result = requirementLogic.parseAnchor(Arrays.asList(
+				new String[] { "the", "system", "should", "be", "done", "with", "some", "ability", "to", "system" }),
+				Arrays.asList(new String[] { "DT", "NP", "MD", "VB", "VBD", "IN", "IN", "NNS", "AA", "VB" }), -1, 2);
+		// then
+		// after provide has no Object
+		assertThat(result, is(true));
+		verify(mockSentenceAnalyzer, times(1)).getAnchorStartIndex(anyList(), anyInt(), anyInt());
+		verify(mockPatternMatcher, times(1)).matches(anyMap(), anyString());
+		verify(mockSentenceAnalyzer, times(0)).getChunks(any(String[].class), any(String[].class));
+		verify(mockRegexesProvider, times(1)).getAnchorRegexes();
+	}
+
+	@Test
+	public void test_parseObject_NullPointerException() {
+
+		// given
+		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
+				mockPatternMatcher, mockRegexesProvider);
+		// when + then
+		assertThrows(NullPointerException.class, () -> requirementLogic.parseObject(null, null, 1));
+	}
 
 	@Test
 	public void test_parseObject_returnFalse_noObject() {
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
+
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 
 		when(mockSentenceAnalyzer.getObjects(anyString(), any(String[].class))).thenReturn(null);
 		// when
@@ -583,10 +590,9 @@ public class RequirementLogicImpl_EngTest {
 	@Test
 	public void test_parseObject_NoPattern_returnFalse() {
 		// given
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
+
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 
 		when(mockSentenceAnalyzer.getObjects(anyString(), any(String[].class))).thenReturn("some String");
 		when(mockPatternMatcher.matches(anyMap(), anyString())).thenReturn(null);
@@ -603,10 +609,9 @@ public class RequirementLogicImpl_EngTest {
 	@Test
 	public void test_parseObject_returnTrue() {
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
+
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 
 		when(mockSentenceAnalyzer.getObjects(anyString(), any(String[].class))).thenReturn("a String");
 		Span mockSpan = new Span(0, 0, "all_the");
@@ -621,25 +626,23 @@ public class RequirementLogicImpl_EngTest {
 		verify(mockPatternMatcher, times(1)).matches(anyMap(), anyString());
 	}
 
-	 @Test
-	 public void test_parseDetails_NullPointerException() {
-	 // given
-	 SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
-	 PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
-	 RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-	 mockPatternMatcher);
-	 // when + then
-	 assertThrows(NullPointerException.class, () -> requirementLogic.parseDetails(null, 1));
-	
-	 }
+	@Test
+	public void test_parseDetails_NullPointerException() {
+		// given
+
+		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
+				mockPatternMatcher, mockRegexesProvider);
+		// when + then
+		assertThrows(NullPointerException.class, () -> requirementLogic.parseDetails(null, 1));
+
+	}
 
 	@Test
 	public void test_parseDetails_returnTrue_withoutCondition() {
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
+
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 
 		// when
 		boolean result = requirementLogic.parseDetails(Arrays.asList(new String[] { "the", "if" }), 1);
@@ -651,10 +654,9 @@ public class RequirementLogicImpl_EngTest {
 	@Test
 	public void test_parseDetails_returnTrue_with_condition() {
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
+
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 		Span mockSpan = new Span(0, 0, "condition");
 		when(mockPatternMatcher.matches(anyMap(), anyString())).thenReturn(new Span[] { mockSpan });
 
@@ -669,10 +671,9 @@ public class RequirementLogicImpl_EngTest {
 	@Test
 	public void test_parseDetails_returnTrue_noPattern() {
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
+
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 		when(mockPatternMatcher.matches(anyMap(), anyString())).thenReturn(null);
 
 		// when
@@ -687,10 +688,9 @@ public class RequirementLogicImpl_EngTest {
 	public void test_parseDetails_returnFalse() {
 
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
+
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 
 		Span mockSpan = new Span(0, 0, "all_the");
 		when(mockPatternMatcher.matches(anyMap(), anyString())).thenReturn(new Span[] { mockSpan });
@@ -699,17 +699,16 @@ public class RequirementLogicImpl_EngTest {
 		boolean result = requirementLogic
 				.parseDetails(Arrays.asList(new String[] { "the", "system", "should", "have", "some", "thing" }), 1);
 		// then
-		assertThat(result, is(false));
+		assertThat(result, is(true));
 		verify(mockPatternMatcher, times(1)).matches(anyMap(), anyString());
 	}
 
 	@Test
 	public void test_getSentences_NullPointerException() {
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
+
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 		// when + then
 		assertThrows(NullPointerException.class, () -> requirementLogic.getSentences(null));
 
@@ -718,10 +717,9 @@ public class RequirementLogicImpl_EngTest {
 	@Test
 	public void test_getSentences_True() {
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
+
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 
 		// when
 		Map<Integer, String> result = requirementLogic.getSentences("some. sentence");
@@ -733,65 +731,73 @@ public class RequirementLogicImpl_EngTest {
 	@Test
 	public void test_doParse_NullException() {
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
+
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 
 		// when + then
 		assertThrows(NullPointerException.class, () -> requirementLogic.doParse(null));
 	}
-	
+
 	@Test
-	public void test_doParse_nonCompliant() {
+	public void test_doParse_nonCompliant_noModalVerb() {
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
 		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
+				mockPatternMatcher, mockRegexesProvider);
 
 		when(mockSentenceAnalyzer.getTokens(anyString())).thenReturn(new String[] { "The", "VMS", "system", "will",
 				"consume", "as", "any", "units", "of", "energy", "as", "possible", "." });
 		when(mockSentenceAnalyzer.getPOSTags(any(String[].class)))
 				.thenReturn(new String[] { "DT", "NN", "NN", "MD", "VB", "IN", "IN", "NNS", "IN", "NN", "IN", "NN" });
 		when(mockSentenceAnalyzer.getModalIndex(anyList(), anyInt())).thenReturn(1);
-		when(mockSentenceAnalyzer.getSystemName(anyList(), anyInt(), anyInt()))
-				.thenReturn(Arrays.asList(new String[] { "the", "VMS", "System" }));
-
 		Map<Integer, String> sentences = new HashMap<Integer, String>();
 		sentences.put(1, anyString());
 		// when
 		List<Map<Integer, String>> result = requirementLogic.doParse(sentences);
 		// then
 		assertThat(result.size(), is(3));
-		assertEquals(result.get(1).get(1) ,"1");
+		assertEquals(result.get(1).get(1), "1");
 	}
-	
+
+	@Test
+	public void test_doParse_nonCompliant_noSystemName() {
+		// given
+		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
+				mockPatternMatcher, mockRegexesProvider);
+
+		when(mockSentenceAnalyzer.getTokens(anyString())).thenReturn(new String[] { "VMS", "system", "will", "consume",
+				"as", "any", "units", "of", "energy", "as", "possible", "." });
+		when(mockSentenceAnalyzer.getPOSTags(any(String[].class)))
+				.thenReturn(new String[] { "NN", "NN", "MD", "VB", "IN", "IN", "NNS", "IN", "NN", "IN", "NN" });
+		when(mockSentenceAnalyzer.getModalIndex(anyList(), anyInt())).thenReturn(1);
+		Map<Integer, String> sentences = new HashMap<Integer, String>();
+		sentences.put(1, anyString());
+		// when
+		List<Map<Integer, String>> result = requirementLogic.doParse(sentences);
+		// then
+		assertThat(result.size(), is(3));
+		assertEquals(result.get(1).get(1), "1");
+	}
+
 	@Test
 	public void test_doParse_Compliant() {
 		// given
-		SentenceAnalyzer mockSentenceAnalyzer = mock(SentenceAnalyzer.class);
-		PatternMatcher mockPatternMatcher = mock(PatternMatcher.class);
-		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
-				mockPatternMatcher);
 
+		RequirementLogicImpl_Eng requirementLogic = new RequirementLogicImpl_Eng(mockSentenceAnalyzer,
+				mockPatternMatcher, mockRegexesProvider);
 		when(mockSentenceAnalyzer.getTokens(anyString())).thenReturn(new String[] { "The", "VMS", "system", "should",
 				"consume", "the", "unit", "of", "energy", "as", "possible", "." });
 		when(mockSentenceAnalyzer.getPOSTags(any(String[].class)))
-				.thenReturn(new String[] { "DT", "NN", "NN", "MD", "VB","DT", "NN", "IN", "NN", "IN", "NN" });
+				.thenReturn(new String[] { "DT", "NN", "NN", "MD", "VB", "DT", "NN", "IN", "NN", "IN", "NN" });
 		when(mockSentenceAnalyzer.getModalIndex(anyList(), anyInt())).thenReturn(1);
-		when(mockSentenceAnalyzer.getSystemName(anyList(), anyInt(), anyInt()))
-				.thenReturn(Arrays.asList(new String[] { "The", "VMS", "System" }));
-		when(mockSentenceAnalyzer.getAnchorStartIndex(anyList(), anyInt(), anyInt())).thenReturn(0);
-		when(mockSentenceAnalyzer.getConditions(anyList(), anyInt(), anyInt())).thenReturn(null);
-		when(mockSentenceAnalyzer.getObjects(anyString(), any(String[].class))).thenReturn("the unit of energy");
-				
+
 		Map<Integer, String> sentences = new HashMap<Integer, String>();
 		sentences.put(1, anyString());
 		// when
 		List<Map<Integer, String>> result = requirementLogic.doParse(sentences);
 		// then
 		assertThat(result.size(), is(3));
-		assertEquals(result.get(1).get(1) ,"1");
+		assertEquals(result.get(1).get(1), "1");
 	}
+
 }
